--- a/index.html
+++ b/index.html
@@ -865,16 +865,22 @@ function leftpaneclick(event)
                <a href="#" class="pagecontrol" t-votes>
                   <div tlink="piechart" thoist></div>
                </a>
-               <div uk-dropdown="pos: bottom-right; mode: click" class="uk-dropdown"> 
-                  <span></span>
-                  <span></span>
-                  <span></span>
+               <div uk-dropdown="pos: bottom-right; mode: click"
+                  class="uk-dropdown uk-padding-small"> 
+                  <span class="uk-text-meta">This page is:</span>
+                  <div t-vote=".internal(pagecontrolvote)"
+                     t-votefunc=".internal(pagecontrolvotefunc)"
+                     class="uk-flex uk-flex-around uk-margin-small-top">
+                     <a href="#" data-votegood>Good</a>
+                     <a href="#" data-voteok>OK</a>
+                     <a href="#" data-votebad>Bad</a>
+                  </div>
                </div>
                <div class="uk-text-meta uk-text-center" t-votecount=".textContent">0</div>
             </div>
             <div>
                <a href="#" class="pagecontrol" t-watched 
-                  t-watchfunc=".internal(pagecontrolwatch)" uk-icon="bell"></a>
+                  t-watchfunc=".internal(pagecontrolwatchfunc)" uk-icon="bell"></a>
                <div class="uk-text-meta uk-text-center" t-watchcount=".textContent">0</div>
             </div>
             <div>
