--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@ if (location.protocol !== "https:") {
 }
 </script>
       <!-- LOC:UIFRAMEWORK -->
-      <link rel="stylesheet" href="uikit-3.5.5/css/uikit.min.css?v=1605660400" />
-      <script src="uikit-3.5.5/js/uikit.min.js?v=1605660400"></script>
-      <script src="uikit-3.5.5/js/uikit-icons.min.js?v=1605660400"></script>
+      <link rel="stylesheet" href="uikit-3.5.5/css/uikit.min.css?v=1605682768" />
+      <script src="uikit-3.5.5/js/uikit.min.js?v=1605682768"></script>
+      <script src="uikit-3.5.5/js/uikit-icons.min.js?v=1605682768"></script>
       <!-- LOC:SCRIPT -->
-      <script src="libbo.js?v=1605660400"></script>
-      <script src="templates.js?v=1605660400"></script>
-      <script src="dom.js?v=1605660400"></script>
-      <script src="api.js?v=1605660400"></script>
-      <script src="index.js?v=1605660400"></script>
-      <script src="sbs2-markup/highlight.js?v=1605660400"></script>
-      <script src="sbs2-markup/parse.js?v=1605660400"></script>
-      <script src="sbs2-markup/render.js?v=1605660400"></script>
+      <script src="libbo.js?v=1605682768"></script>
+      <script src="templates.js?v=1605682768"></script>
+      <script src="dom.js?v=1605682768"></script>
+      <script src="api.js?v=1605682768"></script>
+      <script src="index.js?v=1605682768"></script>
+      <script src="sbs2-markup/highlight.js?v=1605682768"></script>
+      <script src="sbs2-markup/parse.js?v=1605682768"></script>
+      <script src="sbs2-markup/render.js?v=1605682768"></script>
       <!-- LOC:STYLE -->
-      <link rel="stylesheet" href="index.css?v=1605660400" />
+      <link rel="stylesheet" href="index.css?v=1605682768" />
       <script>
 function loginEmailSwitch(element)
 {
@@ -862,7 +862,7 @@ function leftpaneclick(event)
          <div id="pagecontrols" t-page=".internal(pagecontrols)" t-pinned t-permissions
             class="pagecontrols uk-flex-none uk-flex hidelogout" data-loginonly>
             <div>
-               <a href="#" class="pagecontrol">
+               <a href="#" class="pagecontrol" t-votes=".internal(pagecontrolvotepie)">
                   <div tlink="piechart" thoist></div>
                </a>
                <div uk-dropdown="pos: bottom-right; mode: click"
