--- a/index.html
+++ b/index.html
@@ -839,7 +839,7 @@ function leftpaneclick(event)
                      </h4>
                      <span t-type=".internal(typeicon)" class="uk-flex-none type"></span>
                   </div >
-                  <div class="uk-text-meta" t-path=".textContent"></div>
+                  <div class="uk-text-meta uk-text-truncate" t-path=".textContent"></div>
                </div>
                <div tlink="pagecontrols"></div>
             </div>
